V1 of project creation DONE Still known bugs for sure, but for V1, that a motherfucking wrap

--- a/app/assets/stylesheets/add-project.css.scss
+++ b/app/assets/stylesheets/add-project.css.scss
@@ -834,6 +834,7 @@ input[name="add-project-repo-name"] {
   border-radius: 17px;
   border: 1px solid #C2C2CB;
   margin-top: 15px;
+  margin-bottom: 5px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 14px;
@@ -854,15 +855,51 @@ input[name="add-project-repo-name"] {
 
 #pullFromIdeasSearchResults {
   width: 100%;
-  height: 277px;
+  height: 272px;
   overflow: scroll !important;
   list-style-type: none;
   padding-left: 0;
 }
 
+#pullFromIdeasSearchResults > li {
+  cursor: pointer;
+}
+
 .pull-from-ideas-search-result-container {
-  height: 40px;
+  height: 50px;
   width: 100%;
-  border-bottom: 1px solid white;
-  background-color: #00A6C9;
+  display: block;
+  border-bottom: 1px solid #EEE;
+  position: relative;
+}
+
+.pull-from-ideas-project-title {
+  width: 84%;
+  height: 50px;
+  line-height: 50px;
+  display: inline-block;
+  padding-left: 3%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: black;
+  text-overflow: ellipsis;
+}
+
+.pull-from-ideas-user-pic-container {
+  width: 10%;
+  height: 50px;
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding-right: 3%;
+}
+
+.pull-from-ideas-user-pic {
+  width: 25px;
+  height: 25px;
+  border-radius: 12.5px;
+  margin-top: 12.5px;
+  float: right;
 }
